# rustwright

./: .dockerignore  CODE_ARCHITECTURE.md  Cargo.toml  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: claude-code-review.yml  release-nuget.yml
benchmarks/form_fill/: RESULTS.md  download_workload.py  fill_form.py  fill_form_remote.py  nav_workload.py  weakness_workload.py
benchmarks/form_fill/cases/: README.md  WEAKNESSES.md  controlled.json  controlled_more.json  downloads_more.json  nav_more.json  nav_the_internet.json  smoke_download.json  smoke_nav.json
benchmarks/form_fill/fixtures/: README.md  click.html  deep_dom.html  dynamic.html  evaluate.html  form.html  index.html  large_dom.html  object_eval.html
benchmarks/form_fill/harness/: library_probe.py  measure.py  run_one.sh  run_remote.sh  run_suite.py  serve_fixtures.py  skyvern_session.py  skyvern_smoke.py  weakness_probe.py
benchmarks/form_fill/reports/: rustwright_benchmark_report.html
benchmarks/form_fill/results/: stats_local_recorded.json  stats_remote_cdp.json
capi/: Cargo.toml  cbindgen.toml
capi/examples/: smoke.c
capi/include/: rustwright.h
capi/src/: lib.rs
docs/: agent-interfaces.md
go/: evaluate.go  evaluate_test.go  ffi.go  rustwright_test.go
mcp/: .gitignore  AGENT_SETUP.md  README.md  pyproject.toml
mcp/rustwright_mcp/: __init__.py  __main__.py  filepolicy.py  server.py  session.py  snapshot.py
mcp/tests/: test_cdp.py  test_filepolicy.py  test_hardening.py  test_identity.py  test_pr2_compatibility.py  test_pr3_compatibility.py  test_pr4_drop.py  test_resolver.py  test_session.py  test_session_state.py  test_smoke.py
mcp/tests/contract/: __init__.py  contract_schema.py  test_contract.py
mcp/tests/contract/fixtures/: default_toolset.json
mcp/tests/fixtures/: drop_conformance.html  form.html  hardening.html  pr3.html  static.css
mcp/tests/validation/: test_adversarial_filepolicy.py  test_adversarial_resolver.py  test_adversarial_session.py  test_contract_and_identity.py  test_pr2_adversarial_compatibility.py  test_pr3_adversarial_validation.py  test_pr4_adversarial_drop.py
node/: Cargo.toml  index.cjs  index.d.ts  index.mjs  native.d.ts  smoke.mjs
node/scripts/: generate-types.mjs
node/src/: lib.rs
node/test/: all.test.mjs  package.json  timeouts.test.mjs
python/rustwright/: cli.py  sync_api.py
python/rustwright/_agent/: cli.py  errors.py  owner.py  state.py
ruby/: .gitignore  README.md  package.rb  rustwright.gemspec
ruby/lib/: rustwright.rb
rust-native/: Cargo.toml  README.md
rust-native/examples/: quickstart.rs  smoke.rs
rust-native/src/: lib.rs
rust-native/tests/: p1c_facade.rs  remote_cdp.rs  validation_p1b_facade.rs  validation_p1c_independent.rs  validation_p2_cancellation.rs
src/: lib.rs
tests/: test_agent_cli_integration.py  test_cli_mcp_integration.py  test_cli_mcp_verb.py  test_cli_routing.py  test_rustwright_sync_api.py  test_validation_mcp_verb.py
tools/: compare_binding_results.py  gen_binding_cases.py
