[package]
name = "rustwright-core"
version = "0.1.1"
edition = "2021"
rust-version = "1.85"
description = "Rust CDP core for a Python Playwright-compatible automation API"
license = "MIT"
repository = "https://github.com/Skyvern-AI/rustwright"
homepage = "https://github.com/Skyvern-AI/rustwright"
readme = "README.md"
keywords = ["browser", "automation", "cdp", "playwright", "chromium"]
categories = ["web-programming"]

[workspace]
members = ["node", "capi", "rust-native"]
resolver = "2"

[features]
default = ["python"]
python = ["dep:pyo3"]

[lib]
name = "_rustwright"
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "=0.21.7"
futures-util = "=0.3.31"
futures-channel = "=0.3.31"
futures-core = "=0.3.31"
futures-sink = "=0.3.31"
futures-task = "=0.3.31"
pyo3 = { version = "0.29", features = ["abi3-py38"], optional = true }
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "=1.0.188", features = ["derive"] }
serde_json = "=1.0.107"
itoa = "=1.0.9"
ryu = "=1.0.15"
libc = "=0.2.186"
memchr = "=2.8.3"
tempfile = "=3.8.1"
thiserror = "1"
tokio = { version = "=1.52.3", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "=0.29.0", features = ["rustls-tls-webpki-roots"] }
tokio-util = "=0.7.18"
bytes = "=1.12.0"
url = "=2.5.8"
indexmap = "=2.2.6"
hashbrown = "=0.14.5"
quote = "=1.0.37"
proc-macro2 = "=1.0.86"
unicode-ident = "=1.0.24"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
