[package]
name = "rustwright-capi"
version = "0.1.0-alpha.4"
edition = "2021"
publish = false

[lib]
name = "rustwright_capi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "=0.2.186"
rustwright_core = { package = "rustwright-core", path = "..", default-features = false }
serde = { version = "=1.0.194", features = ["derive"] }
serde_json = "=1.0.127"
