[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rustwright-mcp"
version = "0.1.0"
description = "MCP server exposing Rustwright browser automation as tools for MCP-compatible AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2",
    "rustwright>=0.1.1",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
rustwright-mcp = "rustwright_mcp.server:main"

[tool.setuptools.packages.find]
include = ["rustwright_mcp*"]
